--- a/src/app/sections/lista-citas/lista-citas.component.html
+++ b/src/app/sections/lista-citas/lista-citas.component.html
@@ -1,6 +1,8 @@
 <div class="bg-white shadow-lg rounded-lg p-6">
     <div class="flex items-center justify-between mb-2">
-        <span class="text-lg font-semibold w-full p-3 mb-4 rounded-md bg-[#EEEEEE]">{{ getCurrentMonthYear() }}</span>
+        <!-- @if () {}
+        <span class="text-lg font-semibold w-full p-3 mb-4 rounded-md bg-[#EEEEEE]">{{ getCurrentMonthYear() }}</span> -->
+        <span class="text-lg font-semibold w-full p-3 mb-4 rounded-md bg-[#EEEEEE]">{{ getMonthName(selectedMonth) }} {{ currentDate.getFullYear() }}</span>
     </div>
     <div *ngIf="citas.length === 0" class="text-center py-8">
         <svg class="w-16 h-16 mx-auto text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
