Cambiando de lugar los botones de crear doctor y disponibilidad

--- a/src/app/vistas/index-after-login/index-after-login.component.css
+++ b/src/app/vistas/index-after-login/index-after-login.component.css
@@ -48,3 +48,5 @@ app-footer{
     border: solid 1.5px #e1e1e1;
     box-sizing: border-box;
 }
+
+@media (max-width: 1150px) { app-left-nav { display: none; } }
