--- a/src/app/navs/citas-nav/citas-nav.component.html
+++ b/src/app/navs/citas-nav/citas-nav.component.html
@@ -22,7 +22,7 @@
     </button>
   </div>
 
-  <div class="flex justify-between items-center">
+  <div class="flex justify-between items-center h-[48px]">
     <div class="flex space-x-4">
       @if (selectedButton === 'proxima') {
         <select (change)="onMonthSelected($event)" class="px-6 border rounded-md bg-white">
@@ -31,7 +31,7 @@
       }
       @if (isUsuario) {
       <a href="/listaDoctores"
-        class="flex items-center bg-[#3B9AB8] transition-colors hover:bg-[#096c8a] text-white px-7 py-3 rounded-md"><svg
+        class="flex items-center bg-[#3B9AB8] transition-colors hover:bg-[#096c8a] text-white px-7 py-3 rounded-md h-[48px]"><svg
           class="mr-1" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
           <path fill="currentColor"
             d="M7.007 12a.75.75 0 0 1 .75-.75h3.493V7.757a.75.75 0 0 1 1.5 0v3.493h3.493a.75.75 0 1 1 0 1.5H12.75v3.493a.75.75 0 0 1-1.5 0V12.75H7.757a.75.75 0 0 1-.75-.75" />
