--- a/src/app/navs/left-nav/left-nav.component.css
+++ b/src/app/navs/left-nav/left-nav.component.css
@@ -31,11 +31,11 @@ a:hover, #ayuda:hover #disponibilidad:hover #newDoctor:hover {
     height: auto;
 }
 
-  @media (max-width: 700px) {
+  /* @media (max-width: 700px) {
     .hs-collapse {
       display: none !important;
     }
     .hs-collapse.open {
       display: block !important;
     }
-  }
+  } */
