--- a/src/app/vistas/profile/profile.component.html
+++ b/src/app/vistas/profile/profile.component.html
@@ -1,7 +1,7 @@
 <div class="body-profile">
     
     <app-left-nav [perfil]="true"></app-left-nav>
-    <app-secundary-nav [titulo]="'My perfil'" ></app-secundary-nav>
+    <app-secundary-nav [titulo]="'Mi perfil'" ></app-secundary-nav>
 
     <div class="contenido mx-[5%]">
         <app-perfil-nav />
