--- a/src/app/vistas/formulario-historial-medico/formulario-historial-medico.component.html
+++ b/src/app/vistas/formulario-historial-medico/formulario-historial-medico.component.html
@@ -1,67 +1,59 @@
 <div class="flex justify-center items-center min-h-screen bg-gray-100">
   <div class="flex flex-col p-5 w-full max-w-lg bg-white rounded-lg shadow-md">
     <div (click)="navigateToProfile()"
-    class="inline-block w-10 h-10 mb-7 border border-gray-400 rounded-full flex items-center justify-center text-2xl cursor-pointer transition duration-300 transform hover:bg-[#F6F6F6] hover:text-white hover:scale-110">
-    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"> <g fill="none"> 
-        <path d="M24 0v24H0V0zM12.593 23.258l-.011.002l-.071.035l-.02.004l-.014-.004l-.071-.035q-.016-.005-.024.005l-.004.01l-.017.428l.005.02l.01.013l.104.074l.015.004l.012-.004l.104-.074l.012-.016l.004-.017l-.017-.427q-.004-.016-.017-.018m.265-.113l-.013.002l-.185.093l-.01.01l-.003.011l.018.43l.005.012l.008.007l.201.093q.019.005.029-.008l.004-.014l-.034-.614q-.005-.019-.02-.022m-.715.002a.02.02 0 0 0-.027.006l-.006.014l-.034.614q.001.018.017.024l.015-.002l.201-.093l.01-.008l.004-.011l.017-.43l-.003-.012l-.01-.01z" /> <path fill="#000" d="M3.636 11.293a1 1 0 0 0 0 1.414l5.657 5.657a1 1 0 0 0 1.414-1.414L6.757 13H20a1 1 0 1 0 0-2H6.757l3.95-3.95a1 1 0 0 0-1.414-1.414z" /> </g>
-    </svg>
-</div>
+      class="inline-block w-10 h-10 mb-7 border border-gray-400 rounded-full flex items-center justify-center text-2xl cursor-pointer transition duration-300 transform hover:bg-[#F6F6F6] hover:text-white hover:scale-110">
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+        <g fill="none">
+          <path
+            d="M24 0v24H0V0zM12.593 23.258l-.011.002l-.071.035l-.02.004l-.014-.004l-.071-.035q-.016-.005-.024.005l-.004.01l-.017.428l.005.02l.01.013l.104.074l.015.004l.012-.004l.104-.074l.012-.016l.004-.017l-.017-.427q-.004-.016-.017-.018m.265-.113l-.013.002l-.185.093l-.01.01l-.003.011l.018.43l.005.012l.008.007l.201.093q.019.005.029-.008l.004-.014l-.034-.614q-.005-.019-.02-.022m-.715.002a.02.02 0 0 0-.027.006l-.006.014l-.034.614q.001.018.017.024l.015-.002l.201-.093l.01-.008l.004-.011l.017-.43l-.003-.012l-.01-.01z" />
+          <path fill="#000"
+            d="M3.636 11.293a1 1 0 0 0 0 1.414l5.657 5.657a1 1 0 0 0 1.414-1.414L6.757 13H20a1 1 0 1 0 0-2H6.757l3.95-3.95a1 1 0 0 0-1.414-1.414z" />
+        </g>
+      </svg>
+    </div>
     <h1 class="text-2xl font-semibold text-[#3B9AB8] cursor-pointer mb-8 text-center">Jakarta</h1>
+    @if (!recetaExistente) {
+      @if (usuario.id) {
+        <form class="space-y-6" (ngSubmit)="crearHistorial(usuario.id,cita.id)">
+          <input type="hidden">{{historialMedico.usuario.id}}
+          <div class="space-y-2">
+            <label for="diagnostico" class="block text-gray-700 font-medium">
+              Diagnóstico
+            </label>
+            <input [(ngModel)]="historialMedico.diagnostico" id="diagnostico" name="diagnostico" type="text"
+              class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-[#3B9AB8] focus:border-transparent"
+              required />
+          </div>
 
-    @if (usuario.id) {
-    <!-- Formulario con ngSubmit -->
-    <form class="space-y-6" (ngSubmit)="crearHistorial(usuario.id,cita.id)">
-      <input type="hidden">{{historialMedico.usuario.id}}
-      <!-- Diagnóstico -->
-      <div class="space-y-2">
-        <label for="diagnostico" class="block text-gray-700 font-medium">
-          Diagnóstico
-        </label>
-        <input [(ngModel)]="historialMedico.diagnostico"
-          id="diagnostico"
-          name="diagnostico"
-          type="text"
-          class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-[#3B9AB8] focus:border-transparent"
-          required
-        />
-      </div>
+          <div class="space-y-2">
+            <label for="tratamiento" class="block text-gray-700 font-medium">
+              Tratamiento
+            </label>
+            <input [(ngModel)]="historialMedico.tratamiento" id="tratamiento" name="tratamiento" type="text"
+              class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-[#3B9AB8] focus:border-transparent"
+              required />
+          </div>
 
-      <!-- Tratamiento -->
-      <div class="space-y-2">
-        <label for="tratamiento" class="block text-gray-700 font-medium">
-          Tratamiento
-        </label>
-        <input [(ngModel)]="historialMedico.tratamiento"
-          id="tratamiento"
-          name="tratamiento"
-          type="text"
-          class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-[#3B9AB8] focus:border-transparent"
-          required
-        />
-      </div>
+          <div class="space-y-2">
+            <label for="fecha" class="block text-gray-700 font-medium">
+              Fecha del Historial Médico
+            </label>
+            <input [(ngModel)]="historialMedico.fecha" type="date" id="fecha" name="fecha"
+              class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-[#3B9AB8] focus:border-transparent"
+              required />
+          </div>
 
-      <!-- Fecha del Historial Médico -->
-      <div class="space-y-2">
-        <label for="fecha" class="block text-gray-700 font-medium">
-          Fecha del Historial Médico
-        </label>
-        <input [(ngModel)]="historialMedico.fecha"
-          type="date"
-          id="fecha"
-          name="fecha"
-          class="w-full px-4 py-2 border border-gray-300 rounded-md focus:ring-2 focus:ring-[#3B9AB8] focus:border-transparent"
-          required
-        />
-      </div>
-   
-      <!-- Botón de enviar -->
-      <div class="flex justify-center">
-        <button type="submit" class="px-6 py-2 bg-[#3B9AB8] text-white rounded-md hover:bg-[#2d7d96] transition-colors">
-          Continuar
-        </button>
-      </div>
+          <div class="flex justify-center">
+            <button type="submit"
+              class="px-6 py-2 bg-[#3B9AB8] text-white rounded-md hover:bg-[#2d7d96] transition-colors">
+              Continuar
+            </button>
+          </div>
 
-    </form>
+        </form>
+      }
+    } @else {
+      <div>Esta cita ya posee una receta</div>
     }
   </div>
 </div>
