--- a/src/app/sections/info-perfil/info-perfil.component.html
+++ b/src/app/sections/info-perfil/info-perfil.component.html
@@ -1,9 +1,8 @@
 <div class="flex items-center p-4 my-6 border rounded-lg text-gray-500 bg-white">
     @if (usuarios) {
-        <img [src]="'img/usuarios/' + usuario.fotoPerfil" class="w-16 h-16 rounded-full mr-3" alt="Foto de perfil de Pepe dux">
+        <img [src]="'img/usuarios/' + usuario.fotoPerfil" class="w-16 h-16 rounded-full mr-3 sm:w-20 sm:h-20 md:w-24 md:h-24 lg:w-28 lg:h-28" alt="Foto de perfil de Pepe dux">
         <div class="text-sm">
-            <div
-                class="font-medium leading-none text-gray-900 hover:text-indigo-600 transition duration-500 ease-in-out">
+            <div class="font-medium leading-none text-gray-900 hover:text-indigo-600 transition duration-500 ease-in-out">
                 {{ usuario.nombre }} {{ usuario.apellidos }}
             </div>
             <p>{{ usuario.rol }}</p>
@@ -11,15 +10,13 @@
         </div>
     }
     @else  {
-        <img [src]="'img/doctores/' + doctor.fotoPerfil" class="w-16 h-16 rounded-full mr-3" alt="Foto de perfil de Pepe dux">
+        <img [src]="'img/doctores/' + doctor.fotoPerfil" class="w-16 h-16 rounded-full mr-3 sm:w-20 sm:h-20 md:w-24 md:h-24 lg:w-28 lg:h-28" alt="Foto de perfil de Pepe dux">
         <div class="text-sm">
-            <div
-                class="font-medium leading-none text-gray-900 hover:text-indigo-600 transition duration-500 ease-in-out">
+            <div class="font-medium leading-none text-gray-900 hover:text-indigo-600 transition duration-500 ease-in-out">
                 {{ doctor.nombre }} {{ doctor.apellidos }}
             </div>
             <p>{{ doctor.especialidad.nombre }}</p>
             <p>{{ doctor.localidad }}, {{ doctor.provincia }}</p>
         </div>
     }
-    
 </div>
