--- a/src/app/navs/citas-nav/citas-nav.component.html
+++ b/src/app/navs/citas-nav/citas-nav.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-row justify-between gap-4 p-2">
+<div class="flex flex-col sm:flex-row justify-between gap-4 p-2">
   <div class="flex flex-row gap-4 bg-[#f8f8f8] items-center rounded-md p-2">
     <button (click)="onSelectButton('proxima'); listaCitasProximas()" [ngClass]="{
         'bg-white text-black': selectedButton === 'proxima',
@@ -22,25 +22,28 @@
     </button>
   </div>
 
-  <div class="flex justify-between items-center h-[48px]">
-    <div class="flex space-x-4">
+  <!-- Este bloque se adapta en pantallas <=640px -->
+  <div class="flex flex-col sm:flex-row justify-between items-center gap-2 w-full sm:w-auto mt-2 sm:mt-0">
+    <div class="flex flex-col sm:flex-row gap-2 w-full sm:w-auto">
       @if (selectedButton === 'proxima') {
-        <select (change)="onMonthSelected($event)" class="px-6 border rounded-md bg-white">
+        <select (change)="onMonthSelected($event)"
+          class="w-full sm:w-auto px-6 py-3 sm:py-2 text-base sm:text-sm border rounded-md bg-white">
           <option *ngFor="let month of months; let i = index" [value]="month.monthNumber">{{ month.monthName }}</option>
         </select>
       }
       @if (isUsuario) {
-      <a href="/listaDoctores"
-        class="flex items-center bg-[#3B9AB8] transition-colors hover:bg-[#096c8a] text-white px-7 py-3 rounded-md h-[48px]"><svg
-          class="mr-1" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-          <path fill="currentColor"
-            d="M7.007 12a.75.75 0 0 1 .75-.75h3.493V7.757a.75.75 0 0 1 1.5 0v3.493h3.493a.75.75 0 1 1 0 1.5H12.75v3.493a.75.75 0 0 1-1.5 0V12.75H7.757a.75.75 0 0 1-.75-.75" />
-          <path fill="currentColor" fill-rule="evenodd"
-            d="M7.317 3.769a42.5 42.5 0 0 1 9.366 0c1.827.204 3.302 1.643 3.516 3.48c.37 3.157.37 6.346 0 9.503c-.215 1.837-1.69 3.275-3.516 3.48a42.5 42.5 0 0 1-9.366 0c-1.827-.205-3.302-1.643-3.516-3.48a41 41 0 0 1 0-9.503c.214-1.837 1.69-3.276 3.516-3.48m9.2 1.49a41 41 0 0 0-9.034 0A2.486 2.486 0 0 0 5.29 7.424a39.4 39.4 0 0 0 0 9.154a2.486 2.486 0 0 0 2.193 2.164c2.977.332 6.057.332 9.034 0a2.486 2.486 0 0 0 2.192-2.164a39.4 39.4 0 0 0 0-9.154a2.486 2.486 0 0 0-2.192-2.163"
-            clip-rule="evenodd" />
-        </svg>Pedir cita</a>
+        <a href="/listaDoctores"
+          class="flex items-center justify-center bg-[#3B9AB8] hover:bg-[#096c8a] text-white px-5 py-2 sm:px-7 sm:py-3 rounded-md w-full sm:w-auto text-sm sm:text-base">
+          <svg class="mr-1" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24">
+            <path fill="currentColor"
+              d="M7.007 12a.75.75 0 0 1 .75-.75h3.493V7.757a.75.75 0 0 1 1.5 0v3.493h3.493a.75.75 0 1 1 0 1.5H12.75v3.493a.75.75 0 0 1-1.5 0V12.75H7.757a.75.75 0 0 1-.75-.75" />
+            <path fill="currentColor" fill-rule="evenodd"
+              d="M7.317 3.769a42.5 42.5 0 0 1 9.366 0c1.827.204 3.302 1.643 3.516 3.48c.37 3.157.37 6.346 0 9.503c-.215 1.837-1.69 3.275-3.516 3.48a42.5 42.5 0 0 1-9.366 0c-1.827-.205-3.302-1.643-3.516-3.48a41 41 0 0 1 0-9.503c.214-1.837 1.69-3.276 3.516-3.48m9.2 1.49a41 41 0 0 0-9.034 0A2.486 2.486 0 0 0 5.29 7.424a39.4 39.4 0 0 0 0 9.154a2.486 2.486 0 0 0 2.193 2.164c2.977.332 6.057.332 9.034 0a2.486 2.486 0 0 0 2.192-2.164a39.4 39.4 0 0 0 0-9.154a2.486 2.486 0 0 0-2.192-2.163"
+              clip-rule="evenodd" />
+          </svg>
+          Pedir cita
+        </a>
       }
     </div>
   </div>
-
 </div>
