--- a/src/app/nearby-doctors/nearby-doctors-disabled/nearby-doctors-disabled.component.html
+++ b/src/app/nearby-doctors/nearby-doctors-disabled/nearby-doctors-disabled.component.html
@@ -1,8 +1,9 @@
-<div class="contenedor flex flex-col justify-center items-center h-[160px] border border-[#e1e1e1] rounded-[15px] font-normal">
+<div class="contenedor flex flex-col justify-center items-center h-[160px] border border-[#e1e1e1] rounded-[15px] font-normal px-4 text-center">
   <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 12 12" class="mb-3">
     <path fill="#000" d="M6 .5A4.5 4.5 0 0 1 10.5 5c0 1.863-1.42 3.815-4.2 5.9a.5.5 0 0 1-.6 0C2.92 8.815 1.5 6.863 1.5 5A4.5 4.5 0 0 1 6 .5m0 3a1.5 1.5 0 1 0 0 3a1.5 1.5 0 0 0 0-3"/>
   </svg>
-  <span class="text-[#4E4E4E]"> {{ texto }}
-    <a (click)="cambiarEstado()" class="enlace text-[#3B9AB8] cursor-pointer">Activar</a>
+  <span class="text-[#4E4E4E] text-sm sm:text-base">
+    {{ texto }}
+    <a (click)="cambiarEstado()" class="enlace text-[#3B9AB8] cursor-pointer ml-1">Activar</a>
   </span>
 </div>
