--- a/src/app/sections/doctores-recomendados/info-doctor/info-doctor.component.html
+++ b/src/app/sections/doctores-recomendados/info-doctor/info-doctor.component.html
@@ -1,6 +1,6 @@
 <div class="card bg-white border rounded-lg border-[#e1e1e1] w-full p-6 box-border">
-  <div class="card-header flex items-center mb-4">
-    <img [src]="'img/doctores/' + doctor.fotoPerfil" alt="Doctor Photo" class="w-20 h-20 rounded-full object-cover mr-6">
+  <div class="card-header flex flex-col sm:flex-row items-center sm:items-start mb-4 text-center sm:text-left">
+    <img [src]="'img/doctores/' + doctor.fotoPerfil" alt="Doctor Photo" class="w-20 h-20 rounded-full object-cover mb-4 sm:mb-0 sm:mr-6">
     <div class="info flex flex-col">
       <h2 class="m-0 text-xl font-semibold">{{ doctor.nombre }} {{ doctor.apellidos }}</h2>
       <p class="my-2 text-sm text-[#666]">{{ doctor.experiencia }} años de experiencia</p>
@@ -8,8 +8,8 @@
     </div>
   </div>
 
-  <div class="details flex items-center border-t border-[#e1e1e1] pt-4 mt-4">
-    <div class="time flex w-1/2 pr-4 border-r border-[#e1e1e1]">
+  <div class="details flex flex-col sm:flex-row items-start sm:items-center border-t border-[#e1e1e1] pt-4 mt-4 gap-4 sm:gap-0">
+    <div class="time flex w-full sm:w-1/2 sm:pr-4 sm:border-r border-[#e1e1e1]">
       <div class="time-left mr-2 mt-1">
         <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 16 16">
           <path fill="currentColor" fill-rule="evenodd" d="M7.5 13A5.506 5.506 0 0 1 2 7.5C2 4.467 4.467 2 7.5 2S13 4.467 13 7.5S10.533 13 7.5 13m0-12a6.5 6.5 0 1 0 0 13a6.5 6.5 0 0 0 0-13m3 6H8V3.5a.5.5 0 0 0-1 0v4a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 0-1"/>
@@ -22,9 +22,9 @@
         </span>
       </div>
     </div>
-    <div class="separador"></div>
-    <div class="price flex">
-      <div class="price-left ml-5 mr-4 mt-1">
+
+    <div class="price flex w-full sm:w-1/2">
+      <div class="price-left ml-0 sm:ml-5 mr-4 mt-1">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 256 256">
           <path fill="currentColor" d="M184 89.57V84c0-25.08-37.83-44-88-44S8 58.92 8 84v40c0 20.89 26.25 37.49 64 42.46V172c0 25.08 37.83 44 88 44s88-18.92 88-44v-40c0-20.7-25.42-37.32-64-42.43M232 132c0 13.22-30.79 28-72 28c-3.73 0-7.43-.13-11.08-.37C170.49 151.77 184 139 184 124v-18.26c29.87 4.45 48 16.53 48 26.26M72 150.25v-23.79A184 184 0 0 0 96 128a184 184 0 0 0 24-1.54v23.79A163 163 0 0 1 96 152a163 163 0 0 1-24-1.75m96-40.32V124c0 8.39-12.41 17.4-32 22.87V123.5c12.91-3.13 23.84-7.79 32-13.57M96 56c41.21 0 72 14.78 72 28s-30.79 28-72 28s-72-14.78-72-28s30.79-28 72-28m-72 68v-14.07c8.16 5.78 19.09 10.44 32 13.57v23.37C36.41 141.4 24 132.39 24 124m64 48v-4.17c2.63.1 5.29.17 8 .17c3.88 0 7.67-.13 11.39-.35a122 122 0 0 0 12.61 3.76v23.46c-19.59-5.47-32-14.48-32-22.87m48 26.25V174.4a179.5 179.5 0 0 0 24 1.6a184 184 0 0 0 24-1.54v23.79a165.5 165.5 0 0 1-48 0m64-3.38V171.5c12.91-3.13 23.84-7.79 32-13.57V172c0 8.39-12.41 17.4-32 22.87"/>
         </svg>
@@ -44,13 +44,13 @@
   </div>
 
   <div class="book-button mt-4 text-center">
-    <button (click)="navigateToNewAppointment(doctor.id)" class="w-full bg-[#3b9ab8] text-white border-none py-3 px-5 text-base font-light rounded-lg cursor-pointer transition-colors duration-300 hover:bg-[#26738b]">
+    <button (click)="navigateToNewAppointment(doctor.id)" class="w-full sm:w-auto bg-[#3b9ab8] text-white border-none py-3 px-5 text-base font-light rounded-lg cursor-pointer transition-colors duration-300 hover:bg-[#26738b]">
        Pedir cita
     </button>
   </div>
 </div>
 
-<!-- Alerta -->
+<!-- Modal -->
 <div class="relative z-50" aria-labelledby="modal-title" role="dialog" aria-modal="true" *ngIf="showModal">
   <div class="fixed inset-0 bg-gray-500 bg-opacity-30 backdrop-blur-sm transition-opacity animate-fade-in"></div>
 
@@ -87,7 +87,7 @@
           <button
             type="button"
             (click)="closeModal()"
-            class="w-full inline-flex justify-center rounded-lg px-6 py-2.5 text-sm font-medium text-white bg-[#3b9ab8] hover:bg-[#26738b] transition-all transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-blue-300 focus:ring-offset-2 shadow-sm sm:ml-3 sm:w-auto"
+            class="w-full sm:w-auto inline-flex justify-center rounded-lg px-6 py-2.5 text-sm font-medium text-white bg-[#3b9ab8] hover:bg-[#26738b] transition-all transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-blue-300 focus:ring-offset-2 shadow-sm sm:ml-3"
           >
             Cerrar
           </button>
@@ -96,5 +96,3 @@
     </div>
   </div>
 </div>
-
-
