--- a/src/app/sections/historial/historial.component.html
+++ b/src/app/sections/historial/historial.component.html
@@ -1,58 +1,52 @@
-<div class="container mx-auto p-4">
-    <div class="flex justify-between items-center mb-6">
+<div class="container mx-auto p-4 sm:p-6 md:p-8 lg:p-10">
+    <div class="flex flex-col sm:flex-row justify-between items-start sm:items-center mb-6 space-y-4 sm:space-y-0">
         <h2 class="text-2xl font-semibold">Historial</h2>
-        <div class="flex space-x-4">
-            <select class="px-6  border rounded-md bg-white">
+        <div class="flex flex-col sm:flex-row sm:space-x-4 space-y-2 sm:space-y-0 w-full sm:w-auto">
+            <select class="px-6 py-2 border rounded-md bg-white w-full sm:w-auto">
                 <option value="feb">Feb</option>
                 <!-- <option value="mar">Mar</option> -->
             </select>
-            <a href="/listaDoctores" class="flex items-center bg-[#3B9AB8] text-white px-7 py-3 rounded-md"><svg
-                    xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+            <a href="/listaDoctores" class="flex items-center justify-center bg-[#3B9AB8] text-white px-7 py-3 rounded-md w-full sm:w-auto">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                     <path fill="currentColor"
                         d="M7.007 12a.75.75 0 0 1 .75-.75h3.493V7.757a.75.75 0 0 1 1.5 0v3.493h3.493a.75.75 0 1 1 0 1.5H12.75v3.493a.75.75 0 0 1-1.5 0V12.75H7.757a.75.75 0 0 1-.75-.75" />
                     <path fill="currentColor" fill-rule="evenodd"
                         d="M7.317 3.769a42.5 42.5 0 0 1 9.366 0c1.827.204 3.302 1.643 3.516 3.48c.37 3.157.37 6.346 0 9.503c-.215 1.837-1.69 3.275-3.516 3.48a42.5 42.5 0 0 1-9.366 0c-1.827-.205-3.302-1.643-3.516-3.48a41 41 0 0 1 0-9.503c.214-1.837 1.69-3.276 3.516-3.48m9.2 1.49a41 41 0 0 0-9.034 0A2.486 2.486 0 0 0 5.29 7.424a39.4 39.4 0 0 0 0 9.154a2.486 2.486 0 0 0 2.193 2.164c2.977.332 6.057.332 9.034 0a2.486 2.486 0 0 0 2.192-2.164a39.4 39.4 0 0 0 0-9.154a2.486 2.486 0 0 0-2.192-2.163"
                         clip-rule="evenodd" />
-                </svg>Pedir cita</a>
+                </svg>
+                Pedir cita
+            </a>
         </div>
     </div>
 
     <div>
         @if (citasPasadas.length > 0 ) {
         <h5 class="text-xl font-semibold mt-6">Ayer</h5>
-        <div class="grid grid-cols-4 gap-4 mt-4">
+        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 mt-4">
             @for (cita of citasPasadas; track $index) {
-            <app-cita-historial  [cita]="cita" [usuarios]="usuarios"></app-cita-historial>
+            <app-cita-historial [cita]="cita" [usuarios]="usuarios"></app-cita-historial>
             }
-            <!-- <app-cita-historial></app-cita-historial>
-            <app-cita-historial></app-cita-historial>
-            <app-cita-historial></app-cita-historial> -->
         </div>
-    }
+        }
+
         @if (citasActuales.length > 0) {
         <h3 class="text-xl font-semibold mt-6">Hoy</h3>
-        <div class="grid grid-cols-4 gap-4 mt-4">
+        <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 mt-4">
             @for (cita of citasActuales; track $index) {
                  <app-cita-historial [cita]="cita" [usuarios]="usuarios"></app-cita-historial>
             }
         </div>
         }
+
         <div *ngIf="filtrarOrdenarCitasProximas(citasAgrupadas).length > 0">
             <h3 class="text-xl font-semibold mt-6">Próximas</h3>
-          
-            <!-- recorro los datos sobre las fechas agrupadas -->
+
             <div *ngFor="let fecha of filtrarOrdenarCitasProximas(citasAgrupadas)" class="mt-4">
-              <h6 class=" font-semibold text-[#7a7d84]">{{ fecha | date:'dd-MM-yyyy' }}</h6>
-              
-              <!-- Muestra las citas de la fecha actual -->
-              <div class="grid grid-cols-4 gap-4 mt-4 ">
-                <app-cita-historial *ngFor="let cita of citasAgrupadas[fecha]" [cita]="cita" [usuarios]="usuarios"></app-cita-historial>
-              </div>
+                <h6 class="font-semibold text-[#7a7d84]">{{ fecha | date:'dd-MM-yyyy' }}</h6>
+                <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 mt-4">
+                    <app-cita-historial *ngFor="let cita of citasAgrupadas[fecha]" [cita]="cita" [usuarios]="usuarios"></app-cita-historial>
+                </div>
             </div>
-          </div>
-            
-        
-        
-        
+        </div>
     </div>
 </div>
