--- a/src/app/sections/lista-citas/cita/cita.component.html
+++ b/src/app/sections/lista-citas/cita/cita.component.html
@@ -1,12 +1,11 @@
 <div (click)="abrirModal(cita)"
-    class="p-2 mb-2 rounded-md w-[100%] flex justify-between items-center group hover:bg-[#F6F6F6] border border-[#E9E9E9] ">
-    <div
-        class="fecha flex-none bg-[#EEF5DF] px-6 py-2 mr-10 rounded-md border-r border-[#E9E9E9] group-hover:bg-[#FFFFFF] flex-none items-center">
-        <p class="font-semibold grid justify-items-center w-6 ">{{ getFirstLetterOfDay(cita.fecha) }}</p>
+    class="p-2 mb-2 rounded-md w-full flex justify-between items-center group hover:bg-[#F6F6F6] border border-[#E9E9E9]">
+    <div class="fecha flex-none bg-[#EEF5DF] px-6 py-2 mr-10 rounded-md border-r border-[#E9E9E9] group-hover:bg-[#FFFFFF] flex-none items-center">
+        <p class="font-semibold grid justify-items-center w-6">{{ getFirstLetterOfDay(cita.fecha) }}</p>
         <p class="text-[20px] mt-1 grid justify-items-center">{{ cita.fecha | date: 'dd' }}</p>
     </div>
-    <div *ngIf="!isCitasPage" class="flex flex-auto justify-between">
-        <div>
+    <div *ngIf="!isCitasPage" class="flex flex-auto justify-between flex-wrap">
+        <div class="w-full sm:w-auto">
             <p class="font-semibold text-gray-800">{{cita.fecha | date: 'HH:mm':'UTC'}} -
                 {{sumarMediaHora(cita.fecha) | date: 'HH:mm':'UTC'}}</p>
             @if (isNotDoctor){
@@ -31,9 +30,8 @@
         </button>
     </div>
 
-
-    <div *ngIf="isCitasPage" class="flex flex-auto items-center justify-between">
-        <div>
+    <div *ngIf="isCitasPage" class="flex flex-auto items-center justify-between flex-wrap">
+        <div class="w-full sm:w-auto">
             <div class="flex items-center gap-2">
                 <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" viewBox="0 0 24 24">
                     <g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
@@ -47,7 +45,7 @@
             </div>
 
             <div class="flex items-center gap-2 w-[200px]">
-                <div class="flex items-center  w-6 h-6">
+                <div class="flex items-center w-6 h-6">
                     <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" viewBox="0 0 16 16">
                         <path fill="currentColor" d="M11 7c0 1.66-1.34 3-3 3S5 8.66 5 7s1.34-3 3-3s3 1.34 3 3" />
                         <path fill="currentColor" fill-rule="evenodd"
@@ -73,7 +71,6 @@
 
         <div class="ml-4 flex flex-col w-[200px]">
             <p class="font-semibold text-gray-800">Motivo: {{ cita.motivo }}</p>
-            <!-- if para que apaezca dependiendo de si tiene receta o no -->
             @if (cita.estado === "terminada") {
             <a href="#" class="text-sm text-[#3b9ab8] focus:text-blue-500 underline">Ver Receta</a>
             }
@@ -81,12 +78,15 @@
 
         @if (cita.estado !== 'cancelada' && cita.estado !== 'terminada') {
             @if (isNotDoctor === false) {
-                <a href="/receta" class="flex items-center bg-[#3B9AB8] transition-colors hover:bg-[#096c8a] text-white px-7 py-3 rounded-md"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                    <path fill="currentColor" d="M7.007 12a.75.75 0 0 1 .75-.75h3.493V7.757a.75.75 0 0 1 1.5 0v3.493h3.493a.75.75 0 1 1 0 1.5H12.75v3.493a.75.75 0 0 1-1.5 0V12.75H7.757a.75.75 0 0 1-.75-.75" />
-                    <path fill="currentColor" fill-rule="evenodd" d="M7.317 3.769a42.5 42.5 0 0 1 9.366 0c1.827.204 3.302 1.643 3.516 3.48c.37 3.157.37 6.346 0 9.503c-.215 1.837-1.69 3.275-3.516 3.48a42.5 42.5 0 0 1-9.366 0c-1.827-.205-3.302-1.643-3.516-3.48a41 41 0 0 1 0-9.503c.214-1.837 1.69-3.276 3.516-3.48m9.2 1.49a41 41 0 0 0-9.034 0A2.486 2.486 0 0 0 5.29 7.424a39.4 39.4 0 0 0 0 9.154a2.486 2.486 0 0 0 2.193 2.164c2.977.332 6.057.332 9.034 0a2.486 2.486 0 0 0 2.192-2.164a39.4 39.4 0 0 0 0-9.154a2.486 2.486 0 0 0-2.192-2.163" clip-rule="evenodd" />
-                  </svg>Añadir receta</a>
+                <a href="/receta" class="flex items-center bg-[#3B9AB8] transition-colors hover:bg-[#096c8a] text-white px-7 py-3 rounded-md">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                        <path fill="currentColor" d="M7.007 12a.75.75 0 0 1 .75-.75h3.493V7.757a.75.75 0 0 1 1.5 0v3.493h3.493a.75.75 0 1 1 0 1.5H12.75v3.493a.75.75 0 0 1-1.5 0V12.75H7.757a.75.75 0 0 1-.75-.75" />
+                        <path fill="currentColor" fill-rule="evenodd" d="M7.317 3.769a42.5 42.5 0 0 1 9.366 0c1.827.204 3.302 1.643 3.516 3.48c.37 3.157.37 6.346 0 9.503c-.215 1.837-1.69 3.275-3.516 3.48a42.5 42.5 0 0 1-9.366 0c-1.827-.205-3.302-1.643-3.516-3.48a41 41 0 0 1 0-9.503c.214-1.837 1.69-3.276 3.516-3.48m9.2 1.49a41 41 0 0 0-9.034 0A2.486 2.486 0 0 0 5.29 7.424a39.4 39.4 0 0 0 0 9.154a2.486 2.486 0 0 0 2.193 2.164c2.977.332 6.057.332 9.034 0a2.486 2.486 0 0 0 2.192-2.164a39.4 39.4 0 0 0 0-9.154a2.486 2.486 0 0 0-2.192-2.163" clip-rule="evenodd" />
+                    </svg>
+                    Añadir receta
+                </a>
             }
-            <button (click)="cancelarCita(cita.id)"class="flex text-red-400 hover:text-red-600  p-2 items-center ">Cancelar</button>
+            <button (click)="cancelarCita(cita.id)"class="flex text-red-400 hover:text-red-600 p-2 items-center">Cancelar</button>
         } @else if (cita.estado === 'terminada' && cita.votado === false && isNotDoctor) {
         <div class="inline-flex border border-gray-200 rounded-full p-0.5 mr-4">
             <button (click)="voto(cita.doctor.id, true)" type="button"
