--- a/src/app/vistas/edit-profile/edit-profile.component.html
+++ b/src/app/vistas/edit-profile/edit-profile.component.html
@@ -3,13 +3,16 @@
     <app-user-nav />
 </nav>
 
-<div class="flex justify-center items-center w-full h-screen bg-gray-100">
-    <div class="flex flex-col p-5 w-1/2 max-w-lg bg-white rounded-lg shadow-md">
+<div class="flex justify-center items-center w-full min-h-screen bg-gray-100 px-4 sm:px-6">
+    <div class="flex flex-col p-5 w-full sm:w-4/5 md:w-3/5 lg:w-1/2 max-w-lg bg-white rounded-lg shadow-md">
 
         <div (click)="navigateToProfile()"
             class="inline-block w-10 h-10 mb-7 border border-gray-400 rounded-full flex items-center justify-center text-2xl cursor-pointer transition duration-300 transform hover:bg-[#F6F6F6] hover:text-white hover:scale-110">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"> <g fill="none"> 
-                <path d="M24 0v24H0V0zM12.593 23.258l-.011.002l-.071.035l-.02.004l-.014-.004l-.071-.035q-.016-.005-.024.005l-.004.01l-.017.428l.005.02l.01.013l.104.074l.015.004l.012-.004l.104-.074l.012-.016l.004-.017l-.017-.427q-.004-.016-.017-.018m.265-.113l-.013.002l-.185.093l-.01.01l-.003.011l.018.43l.005.012l.008.007l.201.093q.019.005.029-.008l.004-.014l-.034-.614q-.005-.019-.02-.022m-.715.002a.02.02 0 0 0-.027.006l-.006.014l-.034.614q.001.018.017.024l.015-.002l.201-.093l.01-.008l.004-.011l.017-.43l-.003-.012l-.01-.01z" /> <path fill="#000" d="M3.636 11.293a1 1 0 0 0 0 1.414l5.657 5.657a1 1 0 0 0 1.414-1.414L6.757 13H20a1 1 0 1 0 0-2H6.757l3.95-3.95a1 1 0 0 0-1.414-1.414z" /> </g>
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"> 
+                <g fill="none"> 
+                    <path d="M24 0v24H0V0zM12.593 23.258l-.011.002l-.071.035l-.02.004l-.014-.004l-.071-.035q-.016-.005-.024.005l-.004.01l-.017.428l.005.02l.01.013l.104.074l.015.004l.012-.004l.104-.074l.012-.016l.004-.017l-.017-.427q-.004-.016-.017-.018m.265-.113l-.013.002l-.185.093l-.01.01l-.003.011l.018.43l.005.012l.008.007l.201.093q.019.005.029-.008l.004-.014l-.034-.614q-.005-.019-.02-.022m-.715.002a.02.02 0 0 0-.027.006l-.006.014l-.034.614q.001.018.017.024l.015-.002l.201-.093l.01-.008l.004-.011l.017-.43l-.003-.012l-.01-.01z" /> 
+                    <path fill="#000" d="M3.636 11.293a1 1 0 0 0 0 1.414l5.657 5.657a1 1 0 0 0 1.414-1.414L6.757 13H20a1 1 0 1 0 0-2H6.757l3.95-3.95a1 1 0 0 0-1.414-1.414z" /> 
+                </g>
             </svg>
         </div>
 
@@ -22,87 +25,86 @@
                 </div>
             }
             
-        @if (usuarios) {
-            <div class="mb-8">
-                <label for="nombre" class="block mb-2 text-sm text-gray-600">Nombre</label>
-                <input type="text" [(ngModel)]="usuario.nombre" name="nombre" id="nombre" placeholder="Introduzca el nombre"
-                    class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
-            </div>
+            @if (usuarios) {
+                <div class="mb-8">
+                    <label for="nombre" class="block mb-2 text-sm text-gray-600">Nombre</label>
+                    <input type="text" [(ngModel)]="usuario.nombre" name="nombre" id="nombre" placeholder="Introduzca el nombre"
+                        class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+                </div>
 
-            <div class="mb-8">
-                <label for="apellidos" class="block mb-2 text-sm text-gray-600">Apellidos</label>
-                <input type="text" [(ngModel)]="usuario.apellidos" name="apellidos" id="apellidos" placeholder="Introduzca los apellidos"
-                    class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
-            </div>
+                <div class="mb-8">
+                    <label for="apellidos" class="block mb-2 text-sm text-gray-600">Apellidos</label>
+                    <input type="text" [(ngModel)]="usuario.apellidos" name="apellidos" id="apellidos" placeholder="Introduzca los apellidos"
+                        class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+                </div>
 
-            <div class="mb-8">
-                <label for="email" class="block mb-2 text-sm text-gray-600">Email</label>
-                <input type="email" [(ngModel)]="usuario.email" name="email" id="email" placeholder="email@ejemplo.com"
-                    class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
-            </div>
+                <div class="mb-8">
+                    <label for="email" class="block mb-2 text-sm text-gray-600">Email</label>
+                    <input type="email" [(ngModel)]="usuario.email" name="email" id="email" placeholder="email@ejemplo.com"
+                        class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+                </div>
 
-            <div class="mb-8">
-                <label for="telefono" class="block mb-2 text-sm text-gray-600">Número de Contacto</label>
-                <input type="text" [(ngModel)]="usuario.telefono" name="telefono" id="telefono" placeholder="Introduzca su número de teléfono"
-                    class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
-            </div>
+                <div class="mb-8">
+                    <label for="telefono" class="block mb-2 text-sm text-gray-600">Número de Contacto</label>
+                    <input type="text" [(ngModel)]="usuario.telefono" name="telefono" id="telefono" placeholder="Introduzca su número de teléfono"
+                        class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+                </div>
 
-            <div class="mb-8">
-                <label for="localidad" class="block mb-2 text-sm text-gray-600">Localidad</label>
-                <input type="text" [(ngModel)]="usuario.localidad" name="localidad" id="localidad" placeholder="Introduzca la localidad"
-                    class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
-            </div>
+                <div class="mb-8">
+                    <label for="localidad" class="block mb-2 text-sm text-gray-600">Localidad</label>
+                    <input type="text" [(ngModel)]="usuario.localidad" name="localidad" id="localidad" placeholder="Introduzca la localidad"
+                        class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+                </div>
 
-            <div class="mb-8">
-                <label for="direccion" class="block mb-2 text-sm text-gray-600">Dirección</label>
-                <input type="text" [(ngModel)]="usuario.direccion" name="direccion" id="direccion" placeholder="Introduzca la dirección"
-                    class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
-            </div>
-        }@else {
-            <div class="mb-8">
-                <label for="nombre" class="block mb-2 text-sm text-gray-600">Nombre</label>
-                <input type="text" [(ngModel)]="doctor.nombre" name="nombre" id="nombre" placeholder="Introduzca el nombre"
-                    class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
-            </div>
+                <div class="mb-8">
+                    <label for="direccion" class="block mb-2 text-sm text-gray-600">Dirección</label>
+                    <input type="text" [(ngModel)]="usuario.direccion" name="direccion" id="direccion" placeholder="Introduzca la dirección"
+                        class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+                </div>
+            } @else {
+                <div class="mb-8">
+                    <label for="nombre" class="block mb-2 text-sm text-gray-600">Nombre</label>
+                    <input type="text" [(ngModel)]="doctor.nombre" name="nombre" id="nombre" placeholder="Introduzca el nombre"
+                        class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+                </div>
 
-            <div class="mb-8">
-                <label for="apellidos" class="block mb-2 text-sm text-gray-600">Apellidos</label>
-                <input type="text" [(ngModel)]="doctor.apellidos" name="apellidos" id="apellidos" placeholder="Introduzca los apellidos"
-                    class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
-            </div>
+                <div class="mb-8">
+                    <label for="apellidos" class="block mb-2 text-sm text-gray-600">Apellidos</label>
+                    <input type="text" [(ngModel)]="doctor.apellidos" name="apellidos" id="apellidos" placeholder="Introduzca los apellidos"
+                        class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+                </div>
 
-            <div class="mb-8">
-                <label for="email" class="block mb-2 text-sm text-gray-600">Email</label>
-                <input type="email" [(ngModel)]="doctor.email" name="email" id="email" placeholder="email@ejemplo.com"
-                    class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
-            </div>
+                <div class="mb-8">
+                    <label for="email" class="block mb-2 text-sm text-gray-600">Email</label>
+                    <input type="email" [(ngModel)]="doctor.email" name="email" id="email" placeholder="email@ejemplo.com"
+                        class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+                </div>
 
-            <div class="mb-8">
-                <label for="telefono" class="block mb-2 text-sm text-gray-600">Precio Consulta</label>
-                <input type="text" [(ngModel)]="doctor.precioConsulta" name="telefono" id="telefono" placeholder="Introduzca su número de teléfono"
-                    class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
-            </div>
+                <div class="mb-8">
+                    <label for="telefono" class="block mb-2 text-sm text-gray-600">Precio Consulta</label>
+                    <input type="text" [(ngModel)]="doctor.precioConsulta" name="telefono" id="telefono" placeholder="Introduzca su número de teléfono"
+                        class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+                </div>
 
-            <div class="mb-8">
-                <label for="localidad" class="block mb-2 text-sm text-gray-600">Localidad</label>
-                <input type="text" [(ngModel)]="doctor.localidad" name="localidad" id="localidad" placeholder="Introduzca la localidad"
-                    class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
-            </div>
+                <div class="mb-8">
+                    <label for="localidad" class="block mb-2 text-sm text-gray-600">Localidad</label>
+                    <input type="text" [(ngModel)]="doctor.localidad" name="localidad" id="localidad" placeholder="Introduzca la localidad"
+                        class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+                </div>
 
-            <div class="mb-8">
-                <label for="direccion" class="block mb-2 text-sm text-gray-600">Dirección</label>
-                <input type="text" [(ngModel)]="doctor.direccion" name="direccion" id="direccion" placeholder="Introduzca la dirección"
-                    class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
-            </div>
+                <div class="mb-8">
+                    <label for="direccion" class="block mb-2 text-sm text-gray-600">Dirección</label>
+                    <input type="text" [(ngModel)]="doctor.direccion" name="direccion" id="direccion" placeholder="Introduzca la dirección"
+                        class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+                </div>
 
-            <div class="mb-8">
-                <label for="direccion" class="block mb-2 text-sm text-gray-600">Sexo</label>
-                <input type="text" [(ngModel)]="doctor.sexo" name="direccion" id="direccion" placeholder="Introduzca la dirección"
-                    class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
-            </div>
-        }
+                <div class="mb-8">
+                    <label for="direccion" class="block mb-2 text-sm text-gray-600">Sexo</label>
+                    <input type="text" [(ngModel)]="doctor.sexo" name="direccion" id="direccion" placeholder="Introduzca la dirección"
+                        class="block w-full px-4 py-2 mt-2 text-gray-700 placeholder-gray-400 bg-white border border-gray-200 rounded-lg focus:ring-blue-400 focus:outline-none focus:ring focus:ring-opacity-40" />
+                </div>
+            }
         </div>
-    
 
         <div class="flex justify-end mt-2">
             <button class="bg-[#3B9AB8] text-white px-12 py-3 rounded" (click)="editar()">Confirmar</button>
