refactor: simplificando la lógica del left-nav

--- a/src/app/vistas/index-after-login/index-after-login.component.css
+++ b/src/app/vistas/index-after-login/index-after-login.component.css
@@ -49,4 +49,4 @@ app-footer{
     box-sizing: border-box;
 }
 
-@media (max-width: 1150px) { app-left-nav { display: none; } }
+/* @media (max-width: 1150px) { app-left-nav { display: none; } } */
