--- a/src/app/navs/left-nav/left-nav.component.css
+++ b/src/app/navs/left-nav/left-nav.component.css
@@ -1,35 +1,26 @@
 .logo {
-    min-width: 25px;
+  min-width: 25px;
 }
 
-.svg{
-    fill: #7E7E7E;
-    min-width: 25px;
-    height: auto;
-    transition-duration: 300ms;
-    stroke:none;
-    
+.svg {
+  fill: #7E7E7E;
+  stroke: none;
+  min-width: 25px;
+  height: auto;
+  transition: fill 0.3s;
 }
 
-.svg:hover {
-    fill: #ffffff;
-}
-
-a:hover, #ayuda:hover #disponibilidad:hover #newDoctor:hover {
-    .svg {
-        transition: all 0.1s;
-        fill: #ffffff;
-    }
+a:hover .svg {
+  fill: #ffffff;
 }
 
 .svg-selct {
-    min-width: 24px;
-    height: auto;
-    fill: #ffffff;
-    stroke:none;
-    min-width: 25px;
-    height: auto;
+  fill: #ffffff;
+  stroke: none;
+  min-width: 25px;
+  height: auto;
 }
+
 
   /* @media (max-width: 700px) {
     .hs-collapse {
