--- a/src/app/navs/user-nav/user-nav.component.html
+++ b/src/app/navs/user-nav/user-nav.component.html
@@ -19,7 +19,7 @@
     <div class="h-8 w-8 sm:h-10 sm:w-10 rounded-full overflow-hidden cursor-pointer">
       <img [routerLink]="'/perfil'" src="{{ urlFotoPerfil }}" alt="Foto de perfil de {{ nombre }}" class="h-full w-full object-cover">
     </div>
-    <span class="font-bold ml-2 sm:ml-3 text-base sm:text-lg">{{ nombre }}</span>
+    <span class="font-bold ml-2 sm:ml-3 text-sm sm:text-lg">{{ nombre }}</span>
   </div>
 </div>
 
