--- a/src/app/navs/secundary-nav/user-welcome-nav/user-welcome-nav.component.html
+++ b/src/app/navs/secundary-nav/user-welcome-nav/user-welcome-nav.component.html
@@ -1,4 +1,4 @@
-<div class="ml-4 text-base sm:text-lg md:text-xl lg:text-xl">
+<div class="ml-4 text-sm sm:text-sm md:text-xl lg:text-xl">
   @if (isDoctor) {
     @if (sexo == 'masculino') {
       <p class="text-gray-500 font-medium">Hola, Dr. {{ nombreApellido }}</p>
@@ -13,5 +13,5 @@
       <p class="text-gray-500 font-medium">Hola, Sra. {{ nombreApellido }}</p>
     }
   }
-  <p class="font-extrabold text-xl sm:text-xl md:text-2xl lg:text-3xl">{{ titulo }}</p>
+  <p class="font-extrabold text-sm sm:text-xl md:text-2xl lg:text-3xl">{{ titulo }}</p>
 </div>
