--- a/src/app/navs/secundary-nav/secundary-nav.component.css
+++ b/src/app/navs/secundary-nav/secundary-nav.component.css
@@ -25,13 +25,10 @@ nav {
     display: flex;
     align-items: center;
     justify-content: center;
-    
-    
   }
 
   app-find-nav {
-    width: 100%;
-    max-width: 100vw;
+    min-width: 650px;
     overflow-x: auto; 
     box-sizing: border-box;
     margin-top: 20px;
