--- a/src/app/sections/lista-citas/cita/cita.component.html
+++ b/src/app/sections/lista-citas/cita/cita.component.html
@@ -1,130 +1,131 @@
 <div (click)="abrirModal(cita)"
-    class="p-2 mb-2 rounded-md w-full flex justify-between items-center group hover:bg-[#F6F6F6] border border-[#E9E9E9]">
-    <div class="fecha flex-none bg-[#EEF5DF] px-6 py-2 mr-10 rounded-md border-r border-[#E9E9E9] group-hover:bg-[#FFFFFF] flex-none items-center">
-        <p class="font-semibold grid justify-items-center w-6">{{ getFirstLetterOfDay(cita.fecha) }}</p>
-        <p class="text-[20px] mt-1 grid justify-items-center">{{ cita.fecha | date: 'dd' }}</p>
-    </div>
-    <div *ngIf="!isCitasPage" class="flex flex-auto justify-between flex-wrap">
-        <div class="w-full sm:w-auto">
-            <p class="font-semibold text-gray-800">{{cita.fecha | date: 'HH:mm':'UTC'}} -
-                {{sumarMediaHora(cita.fecha) | date: 'HH:mm':'UTC'}}</p>
-            @if (isNotDoctor){
-                @if (cita.doctor.sexo === 'masculino') {
-                    <p class="text-sm text-gray-600">Dr. {{ cita.doctor.nombre }} {{ cita.doctor.apellidos }}</p>
-                }@else {
-                    <p class="text-sm text-gray-600">Dra. {{ cita.doctor.nombre }} {{ cita.doctor.apellidos }}</p>
-                }
-            }@else {
-                @if (cita.usuario.sexo === 'masculino') {
-                    <p class="text-sm text-gray-600">Sr. {{ cita.usuario.nombre }} {{ cita.usuario.apellidos }}</p>
-                }@else {
-                    <p class="text-sm text-gray-600">Sra. {{ cita.usuario.nombre }} {{ cita.usuario.apellidos }}</p>
-                }
-            }
-        </div>
-        <button (click)="abrirModal(cita)">
-            <svg class="w-5 h-5" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor"
-                viewBox="0 0 24 24" stroke-width="2">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7" />
-            </svg>
-        </button>
-    </div>
+     class="p-2 mb-2 rounded-md w-full flex justify-between items-center group hover:bg-[#F6F6F6] border border-[#E9E9E9]">
+  <div class="fecha flex-none bg-[#EEF5DF] px-4 sm:px-6 md:px-8 py-2 mr-2 sm:mr-4 md:mr-6 rounded-md border-r border-[#E9E9E9] group-hover:bg-[#FFFFFF] items-center">
+    <p class="font-semibold grid justify-items-center w-6">{{ getFirstLetterOfDay(cita.fecha) }}</p>
+    <p class="text-[18px] sm:text-[20px] md:text-2xl mt-1 grid justify-items-center">{{ cita.fecha | date: 'dd' }}</p>
+  </div>
 
-    <div *ngIf="isCitasPage" class="flex flex-auto items-center justify-between flex-wrap">
-        <div class="w-full sm:w-auto">
-            <div class="flex items-center gap-2">
-                <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" viewBox="0 0 24 24">
-                    <g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-                        stroke-width="1">
-                        <circle cx="12" cy="12" r="9" />
-                        <path d="M11 8v5h5" />
-                    </g>
-                </svg>
-                <p class="font-semibold text-gray-800">{{cita.fecha | date: 'HH:mm':'UTC'}} -
-                    {{sumarMediaHora(cita.fecha) | date: 'HH:mm':'UTC'}}</p>
-            </div>
-
-            <div class="flex items-center gap-2 w-[200px]">
-                <div class="flex items-center w-6 h-6">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" viewBox="0 0 16 16">
-                        <path fill="currentColor" d="M11 7c0 1.66-1.34 3-3 3S5 8.66 5 7s1.34-3 3-3s3 1.34 3 3" />
-                        <path fill="currentColor" fill-rule="evenodd"
-                            d="M16 8c0 4.42-3.58 8-8 8s-8-3.58-8-8s3.58-8 8-8s8 3.58 8 8M4 13.75C4.16 13.484 5.71 11 7.99 11c2.27 0 3.83 2.49 3.99 2.75A6.98 6.98 0 0 0 14.99 8c0-3.87-3.13-7-7-7s-7 3.13-7 7c0 2.38 1.19 4.49 3.01 5.75"
-                            clip-rule="evenodd" />
-                    </svg>
-                </div>
-                @if (isNotDoctor){
-                    @if (cita.doctor.sexo === 'masculino') {
-                        <p class="text-sm text-gray-600">Dr. {{ cita.doctor.nombre }} {{ cita.doctor.apellidos }}</p>
-                    }@else {
-                        <p class="text-sm text-gray-600">Dra. {{ cita.doctor.nombre }} {{ cita.doctor.apellidos }}</p>
-                    }
-                }@else {
-                    @if (cita.usuario.sexo === 'masculino') {
-                        <p class="text-sm text-gray-600">Sr. {{ cita.usuario.nombre }} {{ cita.usuario.apellidos }}</p>
-                    }@else {
-                        <p class="text-sm text-gray-600">Sra. {{ cita.usuario.nombre }} {{ cita.usuario.apellidos }}</p>
-                    }
-                }
-            </div>
-        </div>
-
-        <div class="ml-4 flex flex-col w-[200px]">
-            <p class="font-semibold text-gray-800">Motivo: {{ cita.motivo }}</p>
-            @if (cita.estado === "terminada") {
-            <a href="#" class="text-sm text-[#3b9ab8] focus:text-blue-500 underline">Ver Receta</a>
-            }
-        </div>
-
-        @if (cita.estado !== 'cancelada' && cita.estado !== 'terminada') {
-            @if (isNotDoctor === false) {
-                <a href="/receta" class="flex items-center bg-[#3B9AB8] transition-colors hover:bg-[#096c8a] text-white px-7 py-3 rounded-md">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                        <path fill="currentColor" d="M7.007 12a.75.75 0 0 1 .75-.75h3.493V7.757a.75.75 0 0 1 1.5 0v3.493h3.493a.75.75 0 1 1 0 1.5H12.75v3.493a.75.75 0 0 1-1.5 0V12.75H7.757a.75.75 0 0 1-.75-.75" />
-                        <path fill="currentColor" fill-rule="evenodd" d="M7.317 3.769a42.5 42.5 0 0 1 9.366 0c1.827.204 3.302 1.643 3.516 3.48c.37 3.157.37 6.346 0 9.503c-.215 1.837-1.69 3.275-3.516 3.48a42.5 42.5 0 0 1-9.366 0c-1.827-.205-3.302-1.643-3.516-3.48a41 41 0 0 1 0-9.503c.214-1.837 1.69-3.276 3.516-3.48m9.2 1.49a41 41 0 0 0-9.034 0A2.486 2.486 0 0 0 5.29 7.424a39.4 39.4 0 0 0 0 9.154a2.486 2.486 0 0 0 2.193 2.164c2.977.332 6.057.332 9.034 0a2.486 2.486 0 0 0 2.192-2.164a39.4 39.4 0 0 0 0-9.154a2.486 2.486 0 0 0-2.192-2.163" clip-rule="evenodd" />
-                    </svg>
-                    Añadir receta
-                </a>
-            }
-            <button (click)="cancelarCita(cita.id)"class="flex text-red-400 hover:text-red-600 p-2 items-center">Cancelar</button>
-        } @else if (cita.estado === 'terminada' && cita.votado === false && isNotDoctor) {
-        <div class="inline-flex border border-gray-200 rounded-full p-0.5 mr-4">
-            <button (click)="voto(cita.doctor.id, true)" type="button"
-                class="inline-flex shrink-0 justify-center items-center size-8 rounded-full text-gray-500 hover:bg-blue-100 hover:text-blue-800 focus:outline-hidden focus:bg-blue-100 focus:text-blue-800 ">
-                <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                    viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                    stroke-linejoin="round">
-                    <path d="M7 10v12"></path>
-                    <path
-                        d="M15 5.88 14 10h5.83a2 2 0 0 1 1.92 2.56l-2.33 8A2 2 0 0 1 17.5 22H4a2 2 0 0 1-2-2v-8a2 2 0 0 1 2-2h2.76a2 2 0 0 0 1.79-1.11L12 2h0a3.13 3.13 0 0 1 3 3.88Z">
-                    </path>
-                </svg>
-            </button>
-            <button (click)="voto(cita.doctor.id, false)" type="button"
-                class="inline-flex shrink-0 justify-center items-center size-8 rounded-full text-gray-500 hover:bg-blue-100 hover:text-blue-800 focus:outline-hidden focus:bg-blue-100 focus:text-blue-800">
-                <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                    viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
-                    stroke-linejoin="round">
-                    <path d="M17 14V2"></path>
-                    <path
-                        d="M9 18.12 10 14H4.17a2 2 0 0 1-1.92-2.56l2.33-8A2 2 0 0 1 6.5 2H20a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2h-2.76a2 2 0 0 0-1.79 1.11L12 22h0a3.13 3.13 0 0 1-3-3.88Z">
-                    </path>
-                </svg>
-            </button>
-        </div>
-        } @else if (cita.estado === 'terminada' && cita.votado === true && isNotDoctor) {
-        <div
-            class="inline-flex items-center border border-gray-300 bg-gray-100 text-gray-700 text-sm font-medium rounded-full px-3 py-1 shadow-sm hover:bg-gray-200 transition">
-            Ya has votado
-        </div>
-        }@else if (cita.estado === 'terminada') {
-            <div class="flex text-red-400 mr-5 p-2 items-center ">Terminada</div>
-        }@else if (cita.estado === 'cancelada') {
-        <div class="flex text-red-400 mr-5 p-2 items-center ">Cancelada</div>
+  <div *ngIf="!isCitasPage" class="flex flex-col sm:flex-row sm:items-center sm:justify-between md:flex-row md:items-center md:justify-start md:flex-wrap md:gap-x-6 md:gap-y-2 min-w-0 w-full">
+    <div class="w-full sm:w-auto md:flex-1 mb-2 sm:mb-0 min-w-0">
+      <p class="font-semibold text-gray-800 text-sm sm:text-base md:text-lg">{{cita.fecha | date: 'HH:mm':'UTC'}} -
+        {{sumarMediaHora(cita.fecha) | date: 'HH:mm':'UTC'}}</p>
+      @if (isNotDoctor){
+        @if (cita.doctor.sexo === 'masculino') {
+          <p class="text-xs sm:text-sm md:text-base text-gray-600">Dr. {{ cita.doctor.nombre }} {{ cita.doctor.apellidos }}</p>
+        }@else {
+          <p class="text-xs sm:text-sm md:text-base text-gray-600">Dra. {{ cita.doctor.nombre }} {{ cita.doctor.apellidos }}</p>
         }
+      }@else {
+        @if (cita.usuario.sexo === 'masculino') {
+          <p class="text-xs sm:text-sm md:text-base text-gray-600">Sr. {{ cita.usuario.nombre }} {{ cita.usuario.apellidos }}</p>
+        }@else {
+          <p class="text-xs sm:text-sm md:text-base text-gray-600">Sra. {{ cita.usuario.nombre }} {{ cita.usuario.apellidos }}</p>
+        }
+      }
     </div>
+    <button (click)="abrirModal(cita)" class="mt-2 sm:mt-0 md:mt-0 md:ml-auto">
+      <svg class="w-4 sm:w-5 md:w-6 h-4 sm:h-5 md:h-6" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor"
+           viewBox="0 0 24 24" stroke-width="2">
+        <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7" />
+      </svg>
+    </button>
+  </div>
+
+  <div *ngIf="isCitasPage" class="flex flex-auto items-center justify-between flex-wrap">
+    <div class="w-full sm:w-auto">
+      <div class="flex items-center gap-2">
+        <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6" viewBox="0 0 24 24">
+          <g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+             stroke-width="1">
+            <circle cx="12" cy="12" r="9" />
+            <path d="M11 8v5h5" />
+          </g>
+        </svg>
+        <p class="font-semibold text-gray-800">{{cita.fecha | date: 'HH:mm':'UTC'}} -
+          {{sumarMediaHora(cita.fecha) | date: 'HH:mm':'UTC'}}</p>
+      </div>
+
+      <div class="flex items-center gap-2 w-[200px]">
+        <div class="flex items-center w-6 h-6">
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" viewBox="0 0 16 16">
+            <path fill="currentColor" d="M11 7c0 1.66-1.34 3-3 3S5 8.66 5 7s1.34-3 3-3s3 1.34 3 3" />
+            <path fill="currentColor" fill-rule="evenodd"
+                  d="M16 8c0 4.42-3.58 8-8 8s-8-3.58-8-8s3.58-8 8-8s8 3.58 8 8M4 13.75C4.16 13.484 5.71 11 7.99 11c2.27 0 3.83 2.49 3.99 2.75A6.98 6.98 0 0 0 14.99 8c0-3.87-3.13-7-7-7s-7 3.13-7 7c0 2.38 1.19 4.49 3.01 5.75"
+                  clip-rule="evenodd" />
+          </svg>
+        </div>
+        @if (isNotDoctor){
+          @if (cita.doctor.sexo === 'masculino') {
+            <p class="text-sm text-gray-600">Dr. {{ cita.doctor.nombre }} {{ cita.doctor.apellidos }}</p>
+          }@else {
+            <p class="text-sm text-gray-600">Dra. {{ cita.doctor.nombre }} {{ cita.doctor.apellidos }}</p>
+          }
+        }@else {
+          @if (cita.usuario.sexo === 'masculino') {
+            <p class="text-sm text-gray-600">Sr. {{ cita.usuario.nombre }} {{ cita.usuario.apellidos }}</p>
+          }@else {
+            <p class="text-sm text-gray-600">Sra. {{ cita.usuario.nombre }} {{ cita.usuario.apellidos }}</p>
+          }
+        }
+      </div>
+    </div>
+
+    <div class="ml-4 flex flex-col w-[200px]">
+      <p class="font-semibold text-gray-800">Motivo: {{ cita.motivo }}</p>
+      @if (cita.estado === "terminada") {
+        <a href="#" class="text-sm text-[#3b9ab8] focus:text-blue-500 underline">Ver Receta</a>
+      }
+    </div>
+
+    @if (cita.estado !== 'cancelada' && cita.estado !== 'terminada') {
+      @if (isNotDoctor === false) {
+        <a href="/receta" class="flex items-center bg-[#3B9AB8] transition-colors hover:bg-[#096c8a] text-white px-7 py-3 rounded-md">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+            <path fill="currentColor" d="M7.007 12a.75.75 0 0 1 .75-.75h3.493V7.757a.75.75 0 0 1 1.5 0v3.493h3.493a.75.75 0 1 1 0 1.5H12.75v3.493a.75.75 0 0 1-1.5 0V12.75H7.757a.75.75 0 0 1-.75-.75" />
+            <path fill="currentColor" fill-rule="evenodd" d="M7.317 3.769a42.5 42.5 0 0 1 9.366 0c1.827.204 3.302 1.643 3.516 3.48c.37 3.157.37 6.346 0 9.503c-.215 1.837-1.69 3.275-3.516 3.48a42.5 42.5 0 0 1-9.366 0c-1.827-.205-3.302-1.643-3.516-3.48a41 41 0 0 1 0-9.503c.214-1.837 1.69-3.276 3.516-3.48m9.2 1.49a41 41 0 0 0-9.034 0A2.486 2.486 0 0 0 5.29 7.424a39.4 39.4 0 0 0 0 9.154a2.486 2.486 0 0 0 2.193 2.164c2.977.332 6.057.332 9.034 0a2.486 2.486 0 0 0 2.192-2.164a39.4 39.4 0 0 0 0-9.154a2.486 2.486 0 0 0-2.192-2.163" clip-rule="evenodd" />
+          </svg>
+          Añadir receta
+        </a>
+      }
+      <button (click)="cancelarCita(cita.id)" class="flex text-red-400 hover:text-red-600 p-2 items-center">Cancelar</button>
+    } @else if (cita.estado === 'terminada' && cita.votado === false && isNotDoctor) {
+    <div class="inline-flex border border-gray-200 rounded-full p-0.5 mr-4">
+      <button (click)="voto(cita.doctor.id, true)" type="button"
+              class="inline-flex shrink-0 justify-center items-center size-8 rounded-full text-gray-500 hover:bg-blue-100 hover:text-blue-800 focus:outline-hidden focus:bg-blue-100 focus:text-blue-800 ">
+        <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+             viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+             stroke-linejoin="round">
+          <path d="M7 10v12"></path>
+          <path
+            d="M15 5.88 14 10h5.83a2 2 0 0 1 1.92 2.56l-2.33 8A2 2 0 0 1 17.5 22H4a2 2 0 0 1-2-2v-8a2 2 0 0 1 2-2h2.76a2 2 0 0 0 1.79-1.11L12 2h0a3.13 3.13 0 0 1 3 3.88Z">
+          </path>
+        </svg>
+      </button>
+      <button (click)="voto(cita.doctor.id, false)" type="button"
+              class="inline-flex shrink-0 justify-center items-center size-8 rounded-full text-gray-500 hover:bg-blue-100 hover:text-blue-800 focus:outline-hidden focus:bg-blue-100 focus:text-blue-800">
+        <svg class="shrink-0 size-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+             viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+             stroke-linejoin="round">
+          <path d="M17 14V2"></path>
+          <path
+            d="M9 18.12 10 14H4.17a2 2 0 0 1-1.92-2.56l2.33-8A2 2 0 0 1 6.5 2H20a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2h-2.76a2 2 0 0 0-1.79 1.11L12 22h0a3.13 3.13 0 0 1-3-3.88Z">
+          </path>
+        </svg>
+      </button>
+    </div>
+    } @else if (cita.estado === 'terminada' && cita.votado === true && isNotDoctor) {
+    <div
+      class="inline-flex items-center border border-gray-300 bg-gray-100 text-gray-700 text-sm font-medium rounded-full px-3 py-1 shadow-sm hover:bg-gray-200 transition">
+      Ya has votado
+    </div>
+    }@else if (cita.estado === 'terminada') {
+    <div class="flex text-red-400 mr-5 p-2 items-center ">Terminada</div>
+    }@else if (cita.estado === 'cancelada') {
+    <div class="flex text-red-400 mr-5 p-2 items-center ">Cancelada</div>
+    }
+  </div>
 </div>
 
- @if (isModalDetalleCitaActivo) {
-    <app-detalle-cita [cita]="cita"(modalCerrado)="cerrarModal()"> </app-detalle-cita>
+@if (isModalDetalleCitaActivo) {
+  <app-detalle-cita [cita]="cita" (modalCerrado)="cerrarModal()"> </app-detalle-cita>
 }
