--- a/front/src/app/vistas/profile/profile.component.css
+++ b/front/src/app/vistas/profile/profile.component.css
@@ -1,7 +1,7 @@
 .body-profile {
     height: 100vh;
     display: grid;
-    grid-template-columns: 15% 1fr;
+    grid-template-columns: 242px 1fr;
     grid-template-rows: 15% 1fr;
     grid-template-areas: 
     "zn     zh"
@@ -19,4 +19,16 @@ app-left-nav {
 .contenido {
     grid-area: zs;
     /* background-color: #D0D0D0; */
+}
+
+@media (max-width: 640px) {
+    .body-profile {
+        grid-template-columns: 1fr;
+        grid-template-areas: 
+            "zh"
+            "zs"
+            "zf";
+    }
+    
+
 }
