--- a/front/src/app/vistas/vistas-citas/vistas-citas.component.html
+++ b/front/src/app/vistas/vistas-citas/vistas-citas.component.html
@@ -1,40 +1,9 @@
-@if (!isMobile) {
-<div class="grid grid-cols-[15%_1fr] h-screen">
-  <div>
-    <app-left-nav [citas]="true"></app-left-nav>
-  </div>
-  <div class="p-4 flex flex-col">
-    <app-secundary-nav [titulo]="'Citas'"></app-secundary-nav>
+<div class="body-citas">
+  <app-left-nav [citas]="true"></app-left-nav>
+  <app-secundary-nav [titulo]="'Citas'"></app-secundary-nav>
+  <div class="conenido mx-[5%]">
     <app-nav-citas (monthSelected)="onMonthSelected($event)" (citasCanceladas)="onCitasCanceladas()"
       (citasProximas)="onCitasProximas()" (citasPasadas)="onCitasPasadas()"></app-nav-citas>
     <app-lista-citas></app-lista-citas>
   </div>
 </div>
-}@else {
-<div class="flex flex-col h-screen">
-  <!-- Left Nav (oculto en pantallas pequeñas) -->
-  <div id="leftNav" [ngClass]="{ 'translate-x-0': isLeftNavOpen, '-translate-x-full': !isLeftNavOpen }"
-    class="translate-x-0 transition-transform transform lg:block fixed inset-y-0 left-0 z-40 bg-white border-r border-gray-200">
-    <app-left-nav [citas]="true"></app-left-nav>
-  </div>
-
-  <!-- Main Content -->
-  <div class="p-4 flex flex-col">
-    <!-- Secondary Navigation and other content go here -->
-    <div class="flex items-center">
-      <svg class="logo" width="21" height="37" viewBox="0 0 23 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <!-- Tu SVG aquí -->
-      </svg>
-      <h1 class="text-[#3B9AB8] font-semibold text-xl cursor-pointer">Jakarta</h1>
-    </div>
-    <app-secundary-nav [titulo]="'Citas'"></app-secundary-nav>
-
-    <app-nav-citas (monthSelected)="onMonthSelected($event)" (citasCanceladas)="onCitasCanceladas()"
-      (citasProximas)="onCitasProximas()" (citasPasadas)="onCitasPasadas()"></app-nav-citas>
-    <app-lista-citas></app-lista-citas>
-  </div>
-
-  <!-- Overlay (Aparece cuando el menú está abierto) -->
-  <div *ngIf="isLeftNavOpen" (click)="isLeftNavOpen = false" class="fixed inset-0 bg-black bg-opacity-50 z-30"></div>
-</div>
-}
