style: fix class name for responsive design in doctores component

--- a/front/src/app/vistas/doctores/doctores.component.css
+++ b/front/src/app/vistas/doctores/doctores.component.css
@@ -23,7 +23,7 @@ app-secundary-nav {
 }
 
 @media (max-width: 640px) {
-  .body-citas {
+  .body-doctores {
     grid-template-columns: 1fr;
     grid-template-areas:
       "zh"
