style: update layout and styles for doctores-recomendados and lista-doctores components

--- a/front/src/app/vistas/index-before-login/index-before-login.component.html
+++ b/front/src/app/vistas/index-before-login/index-before-login.component.html
@@ -12,7 +12,7 @@
     </div>
 
     <br>
-    <cont-doctores-recomendados class="recomendados"/>
+    <cont-doctores-recomendados class="w-full"/>
 
     <br>
 
