--- a/front/src/app/sections/lista-doctores/lista-doctores.component.html
+++ b/front/src/app/sections/lista-doctores/lista-doctores.component.html
@@ -1,8 +1,8 @@
-<div class="cont-info-doctors flex flex-wrap justify-center">
-  @for (doctor of doctores; track $index) {
-    <app-info-doctor 
-      [doctor]="doctor" 
-      class="w-full sm:w-1/2 md:w-1/3 lg:w-[23%] p-4"
-    ></app-info-doctor>
-  }
+<div class="cont-info-doctors flex flex-wrap justify-center max-h-[85vh] overflow-y-auto p-4">
+    @for (doctor of doctores; track $index) {
+      <app-info-doctor 
+        [doctor]="doctor" 
+        class="p-4"
+      />
+    }
 </div>
