Modificacion de footer, banner y lista doctor

--- a/front/src/app/sections/baner/baner.component.html
+++ b/front/src/app/sections/baner/baner.component.html
@@ -31,7 +31,7 @@
   </div>
 
   <!-- IMAGEN FIJA ABAJO A LA DERECHA DETRÁS DEL TEXTO -->
-  <div class="left absolute bottom-0 right-5 sm:right-8 flex justify-end z-0">
+  <div class="left absolute bottom-0 left-1/2 -translate-x-1/2 sm:left-auto sm:translate-x-0 sm:right-8 flex justify-center sm:justify-end z-0">
     <div class="doctores relative w-[200px] sm:w-[250px] md:w-[300px] lg:w-[350px] max-h-[400px] overflow-hidden">
       <img src="img/Doctores_baner.png" alt="doctores-baner"
            class="w-full h-auto rounded-lg object-contain">
