--- a/front/src/app/footer/footer.component.html
+++ b/front/src/app/footer/footer.component.html
@@ -1,79 +1,78 @@
 <div class="bg-[#3b9ab8] flex flex-col items-center justify-center text-white shadow-md py-10">
-    <div class="bg-[#3b9ab8] flex flex-col md:flex-row md:justify-around text-white w-4/5 py-5 mb-5 space-y-8 md:space-y-0">
-        <div class="pb-5">
-            <div class="pb-6">
-                <h2 class="text-lg font-bold">Jakarta</h2>
-            </div>
-
-            <div><a href="/especialidades">Especialidad</a></div>
-            <div><a *ngIf="(usuario.id != undefined) || (doctor.id!=undefined); else login" href="/misCitasUsuario">Citas</a></div>
-            <ng-template #login>
-                <a href="/login">Citas</a>
-            </ng-template>
-            <div>Resultados</div>
-        </div>
-        
-        <div class="pb-5">
-            <div class="pb-7 font-bold">Información</div>
-            <div><a *ngIf="(usuario.id != undefined) || (doctor.id!=undefined); else inicio" href="/perfilHistorial">Historial</a></div>
-            <ng-template #inicio>
-                <a href="/login">Historial</a>
-            </ng-template>
-            <div><a *ngIf="(usuario.id != undefined) || (doctor.id!=undefined); else sesion" href="/perfil">Perfil</a></div>
-            <ng-template #sesion>
-                <a href="/login">Perfil</a>
-            </ng-template>
-
-            <a *ngIf="usuario.id != undefined; else verificarDoctor" href="/listaDoctores">Doctores</a>
-            <ng-template #verificarDoctor>
-                <a *ngIf="doctor?.id != undefined; else loguearse" href="/horario">Horario</a>
-            </ng-template>
-            <ng-template #loguearse>
-                <a href="/login">Doctores</a>
-            </ng-template>
-        </div>
-
-        <div class="pb-5">
-            <div class="pb-7 font-bold">¡Contáctanos!</div>
-            <div>Teléfono: (+34) 912 345 678</div>
-            <div>Email: soporte&#64;hospitaljakarta.com</div>
-            <div>España</div>
-        </div>
-
-        <div class="pb-5">
-            <div class="pb-7 font-bold">Para más información</div>
-            <div class="bg-blue-300 rounded-md text-blue-700 flex items-center justify-center px-4 py-2">
-                <a href="mailto:soporte@hospitaljakarta.com">Introduzca su email</a>
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="ml-2">
-                    <path fill="currentColor" d="M1.946 9.315c-.522-.174-.527-.455.01-.634L21.044 2.32c.529-.176.832.12.684.638l-5.454 19.086c-.15.529-.455.547-.679.045L12 14l6-8l-8 6z" />
-                </svg>
-            </div>
-        </div>
+  <div class="bg-[#3b9ab8] flex flex-row justify-around text-white w-4/5 py-5 mb-5 overflow-x-auto">
+    <div class="pb-5 px-6 flex-shrink-0">
+      <div class="pb-6">
+        <h2 class="text-lg font-bold">Jakarta</h2>
+      </div>
+      <div><a href="/especialidades">Especialidad</a></div>
+      <div>
+        <a *ngIf="(usuario.id != undefined) || (doctor.id!=undefined); else login" href="/misCitasUsuario">Citas</a>
+      </div>
+      <ng-template #login>
+        <a href="/login">Citas</a>
+      </ng-template>
+      <div>Resultados</div>
     </div>
 
-    <div class="flex flex-col md:flex-row justify-around items-center mt-5 w-4/5 space-y-4 md:space-y-0">
-        <p class="text-center md:text-left">© 2025 Hospital Jakarta - Todos los Derechos Reservados</p>
+    <div class="pb-5 px-6 flex-shrink-0">
+      <div class="pb-7 font-bold">Información</div>
+      <div>
+        <a *ngIf="(usuario.id != undefined) || (doctor.id!=undefined); else inicio" href="/perfilHistorial">Historial</a>
+      </div>
+      <ng-template #inicio>
+        <a href="/login">Historial</a>
+      </ng-template>
+      <div>
+        <a *ngIf="(usuario.id != undefined) || (doctor.id!=undefined); else sesion" href="/perfil">Perfil</a>
+      </div>
+      <ng-template #sesion>
+        <a href="/login">Perfil</a>
+      </ng-template>
 
-        <div class="flex justify-center items-center text-center space-x-4">
-            <div class="flex items-center" style="height: 24px;">
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
-                    <path fill="currentColor" d="M10 .4C4.698.4.4 4.698.4 10s4.298 9.6 9.6 9.6s9.6-4.298 9.6-9.6S15.302.4 10 .4M7.65 13.979H5.706V7.723H7.65zm-.984-7.024c-.614 0-1.011-.435-1.011-.973c0-.549.409-.971 1.036-.971s1.011.422 1.023.971c0 .538-.396.973-1.048.973m8.084 7.024h-1.944v-3.467c0-.807-.282-1.355-.985-1.355c-.537 0-.856.371-.997.728c-.052.127-.065.307-.065.486v3.607H8.814v-4.26c0-.781-.025-1.434-.051-1.996h1.689l.089.869h.039c.256-.408.883-1.01 1.932-1.01c1.279 0 2.238.857 2.238 2.699z" />
-                </svg>
-            </div>
-
-            <div class="flex items-center" style="height: 24px;">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="text-white" style="vertical-align: middle;">
-                    <path fill="currentColor" d="M22 12c0-5.52-4.48-10-10-10S2 6.48 2 12c0 4.84 3.44 8.87 8 9.8V15H8v-3h2V9.5C10 7.57 11.57 6 13.5 6H16v3h-2c-.55 0-1 .45-1 1v2h3v3h-3v6.95c5.05-.5 9-4.76 9-9.95" />
-                </svg>
-            </div>
-
-            <div class="flex items-center" style="height: 24px;">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="1 1 22 22" class="text-white" style="vertical-align: middle;">
-                    <path fill="currentColor" d="M13.61 12.243a1.6 1.6 0 1 1-1.56-1.63a1.62 1.62 0 0 1 1.56 1.63" />
-                    <path fill="currentColor" d="M14.763 7.233H9.338a2.024 2.024 0 0 0-2.024 2.024v5.547a2.024 2.024 0 0 0 2.024 2.024h5.425a2.024 2.024 0 0 0 2.024-2.024V9.267a2.026 2.026 0 0 0-2.024-2.034m-2.713 7.723a2.703 2.703 0 1 1 2.642-2.703a2.67 2.67 0 0 1-2.642 2.703m2.936-5.405a.496.496 0 0 1-.496-.506a.506.506 0 1 1 1.012 0a.496.496 0 0 1-.557.506z" />
-                    <path fill="currentColor" d="M12.05 2a10 10 0 1 0-.1 20a10 10 0 0 0 .1-20m6.073 12.702a3.39 3.39 0 0 1-3.41 3.411H9.389a3.39 3.39 0 0 1-3.411-3.41V9.378a3.39 3.39 0 0 1 3.41-3.411h5.325a3.39 3.39 0 0 1 3.41 3.41z" />
-                </svg>
-            </div>
-        </div>
+      <a *ngIf="usuario.id != undefined; else verificarDoctor" href="/listaDoctores">Doctores</a>
+      <ng-template #verificarDoctor>
+        <a *ngIf="doctor?.id != undefined; else loguearse" href="/horario">Horario</a>
+      </ng-template>
+      <ng-template #loguearse>
+        <a href="/login">Doctores</a>
+      </ng-template>
     </div>
+
+    <div class="pb-5 px-6 flex-shrink-0">
+      <div class="pb-7 font-bold">¡Contáctanos!</div>
+      <div>Teléfono: (+34) 912 345 678</div>
+      <div>Email: soporte&#64;hospitaljakarta.com</div>
+      <div>España</div>
+    </div>
+
+    <!-- Para más información solo visible en md en adelante -->
+    <div class="pb-5 px-6 hidden md:block flex-shrink-0">
+      <div class="pb-7 font-bold">Para más información</div>
+      <div class="bg-blue-300 rounded-md text-blue-700 flex items-center justify-center px-4 py-2">
+        <a href="mailto:soporte@hospitaljakarta.com">Introduzca su email</a>
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="ml-2">
+          <path fill="currentColor" d="M1.946 9.315c-.522-.174-.527-.455.01-.634L21.044 2.32c.529-.176.832.12.684.638l-5.454 19.086c-.15.529-.455.547-.679.045L12 14l6-8l-8 6z" />
+        </svg>
+      </div>
+    </div>
+  </div>
+
+  <!-- Para más información solo visible en sm -->
+  <div class="block md:hidden w-4/5 mb-5">
+    <div class="pb-7 font-bold">Para más información</div>
+    <div class="bg-blue-300 rounded-md text-blue-700 flex items-center justify-center px-4 py-2">
+      <a href="mailto:soporte@hospitaljakarta.com">Introduzca su email</a>
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" class="ml-2">
+        <path fill="currentColor" d="M1.946 9.315c-.522-.174-.527-.455.01-.634L21.044 2.32c.529-.176.832.12.684.638l-5.454 19.086c-.15.529-.455.547-.679.045L12 14l6-8l-8 6z" />
+      </svg>
+    </div>
+  </div>
+
+  <!-- Footer -->
+  <div class="flex flex-col md:flex-row justify-around items-center mt-5 w-4/5 space-y-4 md:space-y-0">
+    <p class="text-center md:text-left">© 2025 Hospital Jakarta - Todos los Derechos Reservados</p>
+    <div class="flex justify-center items-center text-center space-x-4">
+      <!-- Iconos -->
+    </div>
+  </div>
 </div>
